# chttpd

./: .gitignore  CMakeLists.txt  README.md  test.ps1
scripts/: build.ps1  run.ps1
src/: auth.c  db_fun.h  gen_uuid.c  main.c  make_db.c  rec.c
src/config/: config.toml
